# windows-playground

./: CMakeLists.txt  README.md  vcpkg.json
directwrite/: README.md  flo.md
directwrite/0_base/: App.cpp  App.h  CMakeLists.txt  Capturer.cpp  Capturer.h  DWrite.cpp  DWrite.h  README.md  main.cpp
directwrite/textformat_flow-direction/: CMakeLists.txt  DWrite.cpp
directwrite/textformat_flowdirection/: CMakeLists.txt  README.md  main.cpp
directwrite/textformat_line-spacing/: CMakeLists.txt  DWrite.cpp  README.md
directwrite/textformat_linespacing/: CMakeLists.txt
directwrite/textformat_paragraph-alignment/: CMakeLists.txt  Capturer.cpp  DWrite.cpp  DWrite.h  README.md
directwrite/textformat_paragraphalignment/: CMakeLists.txt  DWrite.cpp  README.md
directwrite/textformat_text-alignment/: CMakeLists.txt  DWrite.cpp  README.md
directwrite/textformat_trimming/: CMakeLists.txt  DWrite.cpp  README.md
directwrite/textformat_word-wrapping/: App.h  CMakeLists.txt  DWrite.cpp  README.md
winrt/capture/: CMakeLists.txt  Capture.cpp  Capture.h  main.cpp
